# acidpattern

./: .gitignore  README.md  capstone-proposal.md  pyproject.toml  views.md  worklog.md
acidpattern_api/: manage.py
acidpattern_api/__tests__/: test_pattern_model.py
acidpattern_api/acidpattern_api/: asgi.py  settings.py  urls.py  wsgi.py
acidpattern_api/patterns/: models.py  permissions.py  serializers.py  urls.py  views.py
acidpattern_api/patterns/migrations/: 0001_initial.py  0002_rename_author_pattern_owner.py  0002_settings_alter_pattern_name.py  0003_rename_owner_pattern_author.py  0003_section.py  0004_alter_section_pattern_pitch_time.py  0004_rename_time_time_timing.py  0005_alter_pitch_section_alter_time_section_and_more.py  0006_alter_pitch_section_alter_time_section.py
acidpattern_api/tests/: __init__.py  helpers.py  pytest.ini  test_models.py  test_pattern_views.py  test_user_views.py  test_users.py  test_views.py
acidpattern_api/tests/patterns/: test_pattern_models.py  test_pattern_views.py
acidpattern_api/tests/users/: test_user_views.py
acidpattern_api/users/: authorizer.py  models.py  serializers.py  urls.py  views.py
acidpattern_api/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_profile.py
design/: 303_layout.xcf
documentation/: capstone-proposal.md  userstories.md  views.md  worklog.md
frontend/: package-lock.json  package.json
frontend/scripts/: api.ts
frontend/src/: App.tsx  main.tsx  types.d.ts
frontend/src/components/: AcidPattern303.tsx  Footer.tsx  GlobalStyle.tsx  Header.tsx  LogOutView.tsx  (+5 more)
(+53 files in other folders)
